--- a/popup.css
+++ b/popup.css
@@ -8,25 +8,34 @@ body {
   min-width: 300px;
 }
 
+header {
+  margin: 1rem 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
 button {
   /* height: 30px;
   width: 30px; */
   outline: none;
-  margin: 1rem 0 0 0;
+  /* margin: 1rem 0 0 0; */
   border: none;
   border-radius: 2px;
   color: white;
   border: 1px solid white;
   cursor: pointer;
   padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
-  width: 100%;
+  border-radius: 1rem;
+  width: fit-content;
   box-sizing: border-box;
+  font-weight: 900;
+  transition: all 0.1s ease-in;
 }
 
 button:hover {
   background-color: white;
   color: rgb(29, 28, 32);
+  /* width: 100%; */
 }
 
 button.current {
@@ -37,16 +46,26 @@ button.current {
   color: white;
 }
 
-.fontPara {
-  border-bottom: 1px solid white;
-  padding-bottom: 0.5rem;
+.fontItem {
+  /* border: 1px solid rgba(255, 255, 255, 0.595); */
+
+  background-color: rgb(33, 31, 38);
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  border-radius: 0.25rem;
+  transition: all 0.3s ease-in;
+}
+
+.fontItem:hover {
+  background-color: rgb(62, 59, 71);
 }
 
 .htmlElement {
   font-weight: bold;
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 .retrievedFont {
   color: rgb(27, 138, 222);
+  font-size: 16px;
 }
